force-app/main/default/objects/Support_Outstanding_Over_14_Days__c/Support_Outstanding_Over_14_Days__c.object-meta.xml
<CustomObject>
    <description>Support Cases Outstanding over 14 days</description>
    <label>Support Outstanding Over 14 Days</label>
    <nameField>
        <displayFormat>{DD}-{MM}-{YYYY}-{0}</displayFormat>
        <label>Support Outstanding Over 14 Days Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Outstanding Over 14 Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>