force-app/main/default/objects/Support_Outstanding_Over_14_Days__c/fields/ART__c.field-meta.xml
<CustomField>
    <fullName>ART__c</fullName>
    <label>ART</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>