force-app/main/default/objects/Support_Outstanding_Over_14_Days__c/fields/Case_Division__c.field-meta.xml
<CustomField>
    <fullName>Case_Division__c</fullName>
    <label>Case Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>