force-app/main/default/objects/Support_Outstanding_Over_14_Days__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Support Outstanding Over 14 Days</relationshipLabel>
    <relationshipName>Support_Outstanding_Over_14_Days</relationshipName>
    <type>Lookup</type>
</CustomField>