force-app/main/default/objects/Support_Outstanding_Over_14_Days__c/fields/Case_Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Department__c</fullName>
    <label>Case Owner Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>