force-app/main/default/objects/Support_Outstanding_Over_14_Days__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Outstanding Over 14 Days</relationshipLabel>
    <relationshipName>Support_Outstanding_Over_14_Days</relationshipName>
    <type>Lookup</type>
</CustomField>