force-app/main/default/objects/Support_Outstanding_Over_14_Days__c/fields/Related_Product_Range__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Range__c</fullName>
    <label>Related Product Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>